# UniTesk

./: .env  .gitignore  CHANGELOG.md  README.md  build-deb.sh  index.html  install.sh  package-lock.json  package.json  setup.sh  uninstall.sh  unitesk-setup  unitesk.sh  vite.config.ts
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEVELOPER.md  LEIGO.md  README.md  WINDOWS.md  setup.sql  update-manifest.json
scripts/: notify-deadlines.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/deb-scripts/: postinst  postrm  prerm
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  setup_launcher.c
src/components/: ArticleManager.tsx  CalendarView.tsx  ClientList.tsx  Dashboard.tsx  Finance.tsx  NotificationPanel.tsx  ProjectList.tsx  Reports.tsx  TeamList.tsx  TimeTracking.tsx
src/styles/: global.css
src/test/: App.test.tsx  ArticleManager.test.tsx  CalendarView.test.tsx  Dashboard.test.tsx  Finance.test.tsx  NotificationPanel.test.tsx  ProjectList.test.tsx  TimeTracking.test.tsx
